# briangaudino

./: .gitignore  Procfile  manage.py  pyproject.toml
portfolio/: admin.py  apps.py  asgi.py  constants.py  decorators.py  forms.py  middleware.py  models.py  resume.py  settings.py  settings_prod.py  signals.py  urls.py  views.py
portfolio/management/commands/: clearcache.py
portfolio/migrations/: 0001_initial.py  0002_education_is_published_interest_is_published_and_more.py  0003_alter_skill_proficiency.py  0004_rename_skill_technology_alter_job_options_and_more.py  0005_remove_project_technologies_project_tech_stack.py  0006_alter_contact_options_alter_technology_options_and_more.py  0007_alter_project_image.py  0008_content.py  0009_personalinfo.py  0010_technology_icon.py
portfolio/static/css/: custom.css  resume.css
portfolio/static/js/: chat.init.js  nav.js  recaptcha.js  skills.js  theme.js
portfolio/templates/: base.html
portfolio/templates/documents/: resume.html
portfolio/templates/portfolio/: contact.html  contact_success.html  content.html  index.html  projects.html  resume.html
portfolio/templates/portfolio/partials/: _contact.html  _contact_success.html  _content.html  _index.html  _navlinks.html  _projects.html  _resume.html  _tech_stack.html  _title.html
