[project]
name = "briangaudino"
requires-python = ">= 3.10"
dynamic = ["version"]
dependencies = [
    "dj-database-url>=3.0.1",
    "django-admin-ordering>=0.20.0",
    "django-ai-chat",
    "django-csp>=4.0",
    "django-jsonform>=2.23.2",
    "django-reverse-relationship>=0.1.1",
    "django-storages[s3]>=1.14.6",
    "django>=5.2.7",
    "google-genai>=1.46.0",
    "pillow>=12.0.0",
    "psycopg>=3.2.12",
    "python-dotenv>=1.1.1",
    "whitenoise>=6.11.0",
]

[tool.uv]
dev-dependencies = [
    "djlint>=1.36.4",
    "ollama>=0.6.0",
]

[tool.uv.sources]
django-ai-chat = { git = "https://github.com/bgaudino/django-ai-chat" }

[tool.djlint]
indent = 2

[tool.setuptools]
py-modules = []
